# best-occasion

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
infra/: README.md
scripts/: README.md
src/best_occasion/: __init__.py
src/best_occasion/api/: app.py  dependencies.py
src/best_occasion/api/routes/: __init__.py  recommendations.py  registry.py
src/best_occasion/api/schemas/: base.py
src/best_occasion/config/: settings.py
src/best_occasion/embeddings/: base.py  hash.py  sentence_transformer.py
src/best_occasion/integration/: cms_client.py
src/best_occasion/matchmaking/: engine.py
src/best_occasion/registry/: models.py  occasions.py
src/best_occasion/registry/repositories/: memory.py  qdrant.py  vector_store.py
src/best_occasion/services/: recommendation.py  registry.py
src/best_occasion/utils/: logging.py
tests/: conftest.py
tests/integration/: test_qdrant_repository.py  test_registry_flow.py
tests/unit/: test_sanity.py
