[tool.poetry]
name = "best-occasion"
version = "0.1.0"
description = "Toolkit for selecting the best recommendation model for a given context."
authors = ["Felipe Souza <you@example.com>"]
readme = "README.md"
packages = [{ include = "best_occasion", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
